MODIS v5 fire detection algorithm partially implemented

--- a/download/download_land.ipynb
+++ b/download/download_land.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "f828120c-f107-4eff-81dc-b11b5053a231",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "01962eea-7406-4983-a365-687917527c4a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "de3b5c7e-ce3b-47f1-a53a-33b77952a421",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "a3c041bd-fb08-4efa-a88f-b92183188c6f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "56666332-75c8-4a65-9f30-b3ee8ef17b32",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "b52ef829-dafa-4613-9c3e-5bc16d654dc9",
    "metadata": {},
    "outputs": [],
@@ -87,27 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "a3db3691-e987-4586-8508-d0a07e45f6ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AVHRR-Land_v005_AVH09C1_NOAA-07_19850101_c20170611150951.nc',\n",
-       " 'AVHRR-Land_v005_AVH09C1_NOAA-07_19850102_c20170611152524.nc',\n",
-       " 'AVHRR-Land_v005_AVH09C1_NOAA-07_19850103_c20170611153747.nc',\n",
-       " 'AVHRR-Land_v005_AVH09C1_NOAA-07_19850104_c20170611155225.nc',\n",
-       " 'AVHRR-Land_v005_AVH09C1_NOAA-07_19850105_c20170611160658.nc']"
+       "['AVHRR-Land_v005_AVH09C1_NOAA-09_19850704_c20170611183816.nc',\n",
+       " 'AVHRR-Land_v005_AVH09C1_NOAA-09_19850705_c20170611185248.nc',\n",
+       " 'AVHRR-Land_v005_AVH09C1_NOAA-09_19850706_c20170611190921.nc',\n",
+       " 'AVHRR-Land_v005_AVH09C1_NOAA-09_19850707_c20170611192531.nc',\n",
+       " 'AVHRR-Land_v005_AVH09C1_NOAA-09_19850708_c20170611194129.nc']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url_list[:5]"
+    "url_list[180:185]"
    ]
   },
   {
@@ -120,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "6302f4b5-70c7-47bc-a7a7-30e6bccf5a8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer = requests.get(os.path.join(url_dir, url_list[3]))\n",
-    "outpath = 'D:/download/AVHRR-Land_19850104.nc'\n",
+    "buffer = requests.get(os.path.join(url_dir, url_list[183]))\n",
+    "outpath = 'D:/download/AVHRR-Land_19850707.nc'\n",
     "with open(outpath , 'wb') as fp:\n",
     "    fp.write(buffer.content)"
    ]
