More tests on masking cloudy and cloud_shadow pixels on the interactive map

--- a/ee_demo/ee_numpy.ipynb
+++ b/ee_demo/ee_numpy.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "id": "012d3e46-88b1-4314-8abb-640c1c2c4f19",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_413912afafcb6bf0480d551ffaa11ecc {\n",
+       "                #map_7df5dd3b87ae244c898e41fd865472e6 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -481,13 +481,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_413912afafcb6bf0480d551ffaa11ecc&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_7df5dd3b87ae244c898e41fd865472e6&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_413912afafcb6bf0480d551ffaa11ecc = L.map(\n",
-       "                &quot;map_413912afafcb6bf0480d551ffaa11ecc&quot;,\n",
+       "            var map_7df5dd3b87ae244c898e41fd865472e6 = L.map(\n",
+       "                &quot;map_7df5dd3b87ae244c898e41fd865472e6&quot;,\n",
        "                {\n",
        "                    center: [20.0, 0.0],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -501,36 +501,43 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_fb2cf5447557d6586b1df2466c5e826e = L.tileLayer(\n",
+       "            var tile_layer_91d2368ddd37f49ba1ca4187ec6732f8 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_413912afafcb6bf0480d551ffaa11ecc);\n",
+       "            ).addTo(map_7df5dd3b87ae244c898e41fd865472e6);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_b760e1432fb8a3bcc6e3335b42d712a0 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/4709b26f3c8600a87c6b8e1a7c833e58-72f034141d1fcb874cf9a3ac421e4116/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_02733aa6ee3728787cc5b8a24653df8b = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/f51506da7193c37f0823055a95017ada-fee8ef6206d10d61c5b6b36cc88ce2c3/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_413912afafcb6bf0480d551ffaa11ecc);\n",
+       "            ).addTo(map_7df5dd3b87ae244c898e41fd865472e6);\n",
        "        \n",
        "    \n",
-       "            var layer_control_7103b2100d480ecabaa8cf7ad8ded389 = {\n",
+       "            var tile_layer_ccf169b1e7de9670d88754f51b9d9570 = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/2f271f105711e47286b0e5720ae71b96-0e93ede59f362a3ab4350289616670ea/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_7df5dd3b87ae244c898e41fd865472e6);\n",
+       "        \n",
+       "    \n",
+       "            var layer_control_d1142b747cbc33d34cd7c456d9b618b4 = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_fb2cf5447557d6586b1df2466c5e826e,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_91d2368ddd37f49ba1ca4187ec6732f8,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;AVHRR_B2&quot; : tile_layer_b760e1432fb8a3bcc6e3335b42d712a0,\n",
+       "                    &quot;AVHRR_B2&quot; : tile_layer_02733aa6ee3728787cc5b8a24653df8b,\n",
+       "                    &quot;AVHRR_B2_only_cloudmask&quot; : tile_layer_ccf169b1e7de9670d88754f51b9d9570,\n",
        "                },\n",
        "            };\n",
        "            L.control.layers(\n",
-       "                layer_control_7103b2100d480ecabaa8cf7ad8ded389.base_layers,\n",
-       "                layer_control_7103b2100d480ecabaa8cf7ad8ded389.overlays,\n",
+       "                layer_control_d1142b747cbc33d34cd7c456d9b618b4.base_layers,\n",
+       "                layer_control_d1142b747cbc33d34cd7c456d9b618b4.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_413912afafcb6bf0480d551ffaa11ecc);\n",
+       "            ).addTo(map_7df5dd3b87ae244c898e41fd865472e6);\n",
        "        \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x178b4ecd000>"
+       "<folium.folium.Map at 0x178b4ea3400>"
       ]
      },
      "metadata": {},
@@ -556,14 +563,16 @@
     "avhrr_1 = avhrr_col.filter(ee.Filter.date('1985-07-01', '1985-07-05')).first()  # do not select bands\n",
     "\n",
     "qa = avhrr_1.select('QA')\n",
-    "cldmsk = 1 << 1\n",
-    "cldsmsk = 2 << 1\n",
-    "\n",
+    "cldmsk = 1 << 1   # cloud\n",
+    "cldsmsk = 1 << 2  # cloud shadow\n",
+    "mask = (qa.bitwiseAnd(cldmsk).eq(0)).And(qa.bitwiseAnd(cldsmsk).eq(0))  \n",
+    "mask1 = qa.bitwiseAnd(cldmsk).eq(0)\n",
     "ndvi = avhrr_1.normalizedDifference(['SREFL_CH2','SREFL_CH1']).rename('NDVI')\n",
-    "ndvi.updateMask(qa.bitwiseAnd(cldmsk).eq(1))\n",
+    "ndvi_m = ndvi.updateMask(mask)\n",
+    "ndvi_cldmsk = ndvi.updateMask(mask1)\n",
     "\n",
-    "\n",
-    "my_map.add_ee_layer(ndvi, vis_params, 'AVHRR_B2')\n",
+    "my_map.add_ee_layer(ndvi_m, vis_params, 'AVHRR_B2')\n",
+    "my_map.add_ee_layer(ndvi_cldmsk, vis_params, 'AVHRR_B2_only_cloudmask')\n",
     "\n",
     "# Add a layer control panel to the map.\n",
     "my_map.add_child(folium.LayerControl())\n",
