Made some new maps

--- a/ee_demo/ee_demo1.ipynb
+++ b/ee_demo/ee_demo1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3368fcd6-e0cc-41fc-be95-8bd68c21325d",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a2b2feb0-21a6-40b8-aa43-e2a319a709cb",
    "metadata": {},
    "outputs": [],
@@ -63,6 +63,7 @@
    "cell_type": "markdown",
    "id": "b5bb3603-08ee-417e-9197-dfb91d7f8aef",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
