Try using a different crs in folium.Map; It does not have EPSG3995 and Simple does not change the basemap projection (3857) even though reprojected Chl_a can be also plotted correctly (on 3857)

--- a/ee_demo/ee_ocean_chl.ipynb
+++ b/ee_demo/ee_ocean_chl.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6b55739e-0175-4f60-a203-b0e5c02b8c06",
    "metadata": {},
    "outputs": [],
@@ -53,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ea58103d-2457-4479-8558-630cd09869c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ee.image.Image at 0x1de02a8e260>"
+       "<ee.image.Image at 0x262db292350>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "af4118ee-bb77-4ca4-9c40-cb818512e40d",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_4bce14992a521c04521cd017d6e377b2 {\n",
+       "                #map_8665febd65b76219d4d8e257707edab8 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -118,13 +118,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_4bce14992a521c04521cd017d6e377b2&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8665febd65b76219d4d8e257707edab8&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_4bce14992a521c04521cd017d6e377b2 = L.map(\n",
-       "                &quot;map_4bce14992a521c04521cd017d6e377b2&quot;,\n",
+       "            var map_8665febd65b76219d4d8e257707edab8 = L.map(\n",
+       "                &quot;map_8665febd65b76219d4d8e257707edab8&quot;,\n",
        "                {\n",
        "                    center: [20.0, 0.0],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -138,36 +138,36 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_9a1caad18e4b3e236d9f5e8664e2a153 = L.tileLayer(\n",
+       "            var tile_layer_429f3fc85670f9d45f6d6614c7c5a926 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_4bce14992a521c04521cd017d6e377b2);\n",
+       "            ).addTo(map_8665febd65b76219d4d8e257707edab8);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_f5abcb22decc67bf80f178988408f35a = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/5527b195c8ee2df255606ac252d8dc2d-b664fca9ec4c655f70781b2320c0b88e/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_ce40ec77e391cde3a8e499cf6ab3fb32 = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/5527b195c8ee2df255606ac252d8dc2d-8bc484d61a9e16acd0a01dfe27aeb8f9/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_4bce14992a521c04521cd017d6e377b2);\n",
+       "            ).addTo(map_8665febd65b76219d4d8e257707edab8);\n",
        "        \n",
        "    \n",
-       "            var layer_control_4873f2daa923f31a2f3287815a91a6cd = {\n",
+       "            var layer_control_1d596d8f220659c9c2d9ece2899b1de4 = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_9a1caad18e4b3e236d9f5e8664e2a153,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_429f3fc85670f9d45f6d6614c7c5a926,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;SeaWIFS Chl_a&quot; : tile_layer_f5abcb22decc67bf80f178988408f35a,\n",
+       "                    &quot;SeaWIFS Chl_a&quot; : tile_layer_ce40ec77e391cde3a8e499cf6ab3fb32,\n",
        "                },\n",
        "            };\n",
        "            L.control.layers(\n",
-       "                layer_control_4873f2daa923f31a2f3287815a91a6cd.base_layers,\n",
-       "                layer_control_4873f2daa923f31a2f3287815a91a6cd.overlays,\n",
+       "                layer_control_1d596d8f220659c9c2d9ece2899b1de4.base_layers,\n",
+       "                layer_control_1d596d8f220659c9c2d9ece2899b1de4.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_4bce14992a521c04521cd017d6e377b2);\n",
+       "            ).addTo(map_8665febd65b76219d4d8e257707edab8);\n",
        "        \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1de04f13bb0>"
+       "<folium.folium.Map at 0x262d80ff010>"
       ]
      },
      "metadata": {},
@@ -199,6 +199,189 @@
     "# Display the map.\n",
     "display(my_map)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7984d8f-2443-4948-a6f6-53fcdb837559",
+   "metadata": {},
+   "source": [
+    "# Use a different basemap projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d2138f31-7943-4a86-a8e7-99c3cd4517da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set visualization parameters.\n",
+    "vis_params = {\n",
+    "    'min': 0,\n",
+    "    'max': 10,\n",
+    "    }\n",
+    "\n",
+    "seawifs_col = ee.ImageCollection('NASA/OCEANDATA/SeaWiFS/L3SMI')\n",
+    "swf1 = seawifs_col.filter(ee.Filter.date('1998-07-01', '1998-08-05')).mean()\n",
+    "chl_a = swf1.select('chlor_a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "05e0bfd8-a115-47e3-81af-12393b691fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chl_a1 = chl_a.reproject(crs='EPSG:3995', scale=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c9abdcf6-617c-489e-a657-8e99d969575f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ee.image.Image at 0x262db2920e0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chl_a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1d3516f4-5d09-427a-bfb1-9e29f95c383c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;head&gt;    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_220e74c2c038bcdffa952091d6fc955e {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_220e74c2c038bcdffa952091d6fc955e&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;    \n",
+       "    \n",
+       "            var map_220e74c2c038bcdffa952091d6fc955e = L.map(\n",
+       "                &quot;map_220e74c2c038bcdffa952091d6fc955e&quot;,\n",
+       "                {\n",
+       "                    center: [0, 0],\n",
+       "                    crs: L.CRS.Simple,\n",
+       "                    zoom: 1,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_89808681e86d438b7fb250295a0a55c1 = L.tileLayer(\n",
+       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_220e74c2c038bcdffa952091d6fc955e);\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_d59df1fd0bb4006d780f07702089116c = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/ea01a38534fc80c090a841a302091232-5fef8fd894e8eb42015b5fe482621749/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Map Data \\u0026copy; \\u003ca href=\\&quot;https://earthengine.google.com/\\&quot;\\u003eGoogle Earth Engine\\u003c/a\\u003e&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_220e74c2c038bcdffa952091d6fc955e);\n",
+       "        \n",
+       "    \n",
+       "            var layer_control_b02386c69c737eb1b8a6ca8d434b7f83 = {\n",
+       "                base_layers : {\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_89808681e86d438b7fb250295a0a55c1,\n",
+       "                },\n",
+       "                overlays :  {\n",
+       "                    &quot;SeaWIFS Chl_a&quot; : tile_layer_d59df1fd0bb4006d780f07702089116c,\n",
+       "                },\n",
+       "            };\n",
+       "            L.control.layers(\n",
+       "                layer_control_b02386c69c737eb1b8a6ca8d434b7f83.base_layers,\n",
+       "                layer_control_b02386c69c737eb1b8a6ca8d434b7f83.overlays,\n",
+       "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
+       "            ).addTo(map_220e74c2c038bcdffa952091d6fc955e);\n",
+       "        \n",
+       "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x262d80febf0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Add EE drawing method to folium.\n",
+    "folium.Map.add_ee_layer = add_ee_layer\n",
+    "\n",
+    "# Create a folium map object.\n",
+    "my_map = folium.Map(zoom_start=3, crs='Simple')\n",
+    "\n",
+    "my_map.add_ee_layer(chl_a1, vis_params, 'SeaWIFS Chl_a')\n",
+    "\n",
+    "# Add a layer control panel to the map.\n",
+    "my_map.add_child(folium.LayerControl())\n",
+    "\n",
+    "# Display the map.\n",
+    "display(my_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f34153b8-721f-4e21-b771-7052e360f14a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
